overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
 
 * {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
